# irctc-suite

./: .gitignore  HANDOFF.md  LICENSE  PLAN.md  README.md
.github/: PULL_REQUEST.md  WEEKEND1_PR.md
.github/workflows/: railpulse-ci.yml
railpulse/: .dockerignore  .env.example  DEPLOY.md  Dockerfile  README.md  pyproject.toml
railpulse/app/: config.py  main.py
railpulse/app/api/: model_card.py  pnr.py  predict.py  rate_limit.py  schemas.py
railpulse/app/data/: rapidapi_client.py
railpulse/app/db/: connection.py  schema.sql
railpulse/app/db/repositories/: __init__.py  api_usage.py  pnrs.py  predictions.py  trains.py
railpulse/app/ml/: features.py  predict.py  train_v0.py
railpulse/supabase/migrations/: 0001_railpulse_init.sql
railpulse/tests/: conftest.py  test_api_pnr.py  test_api_predict.py  test_features.py  test_predict.py  test_rate_limit.py
trainpool/: .env.example  README.md  middleware.ts  next.config.ts  package.json  tailwind.config.ts
trainpool/app/: globals.css  layout.tsx  page.tsx
trainpool/app/api/trips/: route.ts
trainpool/app/api/trips/[slug]/generate-block/: route.ts
trainpool/app/api/trips/[slug]/passengers/: route.ts
trainpool/app/auth/callback/: route.ts
trainpool/app/dashboard/: layout.tsx  page.tsx  sign-out-button.tsx
trainpool/app/dashboard/[slug]/: dashboard.tsx  generate-block-modal.tsx  page.tsx
trainpool/app/dashboard/new/: form.tsx  page.tsx
trainpool/app/login/: page.tsx
trainpool/app/trip/[slug]/: form.tsx  page.tsx
trainpool/lib/: encryption.ts  paste-block.ts
trainpool/lib/supabase/: server.ts
trainpool/supabase/migrations/: 0001_init.sql
