[project]
name = "railpulse"
version = "0.1.0"
description = "Honest PNR confirmation probability for Indian Railways"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
    "redis>=5.1.0",
    "celery>=5.4.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "lightgbm>=4.5.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "joblib>=1.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "jupyter>=1.1.0",
    "matplotlib>=3.9.0",
    "mlflow>=2.17.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
