[project]
name = "railpulse"
version = "0.1.0"
description = "Honest PNR confirmation probability for Indian Railways"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.2.0",
    "greenlet>=3.0.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "numpy>=2.1.0",
    "joblib>=1.4.0",
]

[project.optional-dependencies]
ml = [
    "lightgbm>=4.5.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
# B008 — FastAPI uses Depends(...) in argument defaults by design.
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
# train_v0.py is optional tooling, not wired into the runtime; skip linting it.
"app/ml/train_v0.py" = ["F401", "I001", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = false

[tool.setuptools.packages.find]
include = ["app*"]
